--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Zhikai Wang (王智恺)"
-  avatar           : "profile.png"
+  avatar           : "portrait.jpeg"
   bio              : "A fourth-year PhD candidate in Computer Science"
   location         : "Shanghai, China"
   employer         :
