--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Daniel Wong's Homepage"
+title                    : "Zhikai Wang's Homepage"
 title_separator          : "-"
 name                     : &name "Zhikai Wang"
 description              : &description "A fourth-year PhD candidate in Computer Science"
